--- a/store/pom.xml
+++ b/store/pom.xml
@@ -55,5 +55,10 @@
             <artifactId>logback-classic</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.conversantmedia</groupId>
+            <artifactId>disruptor</artifactId>
+            <version>1.2.10</version>
+        </dependency>
     </dependencies>
 </project>
