add Metrics codes, and passedthe test.

--- a/store/pom.xml
+++ b/store/pom.xml
@@ -60,5 +60,9 @@
             <artifactId>disruptor</artifactId>
             <version>1.2.10</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
     </dependencies>
 </project>
