--- a/distribution/conf/broker.conf
+++ b/distribution/conf/broker.conf
@@ -19,4 +19,9 @@ brokerId = 0
 deleteWhen = 04
 fileReservedTime = 48
 brokerRole = ASYNC_MASTER
+recoverConcurrently=true
 flushDiskType = ASYNC_FLUSH
+autoCreateTopic = true
+namesrvAddr=127.0.0.1:9876
+diskMaxUsedSpaceRatio = 50
+brokerIP1=127.0.0.1
